# CSCC-Back-End

./: .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  ruff_out.txt  uv_err.txt  uv_out.txt  uvicorn_output.txt  uvicorn_stderr.txt  uvicorn_stdout.txt  ws_debug2.txt  ws_debug2_out.txt  ws_test_err.txt
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py
models/jointbert/: intent2id.json  slot2id.json
specs/001-ai-call-center-backend/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/001-ai-call-center-backend/checklists/: requirements.md
specs/001-ai-call-center-backend/contracts/: rest-api.md  websocket.md
src/: main.py
src/application/ports/: dst_port.py  llm_port.py  nlg_port.py  nlu_port.py  policy_port.py  stt_port.py  tts_port.py
src/application/use_cases/: extract_claims.py  generate_reminder.py  handle_call.py  ingest_document.py  retrieve_knowledge.py  stream_conversation.py  tod_pipeline.py
src/domain/: errors.py
src/domain/entities/: __init__.py  call_session.py  claim.py  dialogue_state.py  document.py  embedding.py  message.py  reminder.py
src/domain/repositories/: call_session_repository.py  claim_repository.py  document_repository.py  reminder_repository.py  vector_repository.py
src/domain/services/: prompt_sanitizer.py
src/domain/value_objects/: confidence_score.py  session_state.py  speaker_role.py
src/infrastructure/cache/: redis_client.py
src/infrastructure/dst/: hybrid_dst_adapter.py
src/infrastructure/llm/: huggingface_client.py  openai_client.py
src/infrastructure/nlg/: template_nlg_adapter.py
src/infrastructure/nlu/: jointbert_nlu_adapter.py  phobert_nlu_adapter.py
src/infrastructure/observability/: circuit_breaker.py  metrics.py  noop_tracer.py
src/infrastructure/policy/: rule_policy_adapter.py
src/infrastructure/signaling/: webrtc_handler.py
src/infrastructure/stt/: faster_whisper_adapter.py  google_cloud_stt_adapter.py
src/infrastructure/tts/: coqui_tts_adapter.py  edge_tts_adapter.py  (+1 more)
src/interface/: api_router.py  dependencies.py  exception_handlers.py
tests/: conftest.py
tests/contract/: test_rest_contract.py
tests/integration/: conftest.py
tests/load/: locustfile.py
(+41 files in other folders)
